# graphik

./: .gitignore  .gitmodules  COPYRIGHT.md  LICENSE  README.md  RELEASING.md  pom.xml  pyproject.toml
.github/workflows/: publish.yml
src/: Graphik.py
src/main/java/: GrafikLib.java  Graphik.java
src/main/python/preponderous/graphik/: __init__.py  graphik.py
src/test/python/: conftest.py
src/test/python/preponderous/graphik/: test_graphik.py
